--- a/src/components/Fullpage/style.css
+++ b/src/components/Fullpage/style.css
@@ -1,7 +1,6 @@
-.container-fluid {
-  padding-left: 0px;
-  padding-right: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  color: aliceblue;
+.fullpageWidth {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
 }
