--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #141414;
+  text-shadow: 2px 2px 5px black;
+  background-color: #000000;
   display: flex;
   justify-content: center;
   margin: 0;
