--- a/src/components/Fullpage/style.css
+++ b/src/components/Fullpage/style.css
@@ -1,5 +1,14 @@
 .fullpageWidth {
   width: 90vw;
+  height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
+  background-color: rgb(12, 12, 12);
+  background: linear-gradient(
+    90deg,
+    black 0%,
+    rgba(109, 109, 109, 0.63) 50%,
+    black 100%
+  );
 }
